# src/main/kotlin/com/iobuilders/bank/user/model/User.kt
@@ -1,12 +1,17 @@
 package com.iobuilders.bank.user.model
 
 import java.util.*
+import javax.persistence.*
 
-data class User (
+@Entity
+class User (
 
+    @Id
     val id: UUID,
+    @Column(unique = true)
     val username: String,
-    val name: String ?= null,
-    val lastname: String ?= null
+    val firstName: String? = null,
+    val lastName: String? = null,
+    val email: String? = null
 
 )
