# src/main/resources/JacoboMil-io-builders-2.0.0-oas3-resolved.yaml
@@ -38,7 +38,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/UserResponse'
-  /users/{userID}:
+  /users/{userId}:
     get:
       tags:
       - Users
@@ -46,7 +46,7 @@ paths:
       description: get user info
       operationId: get_user_by_id
       parameters:
-      - name: userID
+      - name: userId
         in: path
         required: true
         style: simple
@@ -63,6 +63,30 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/UserResponse'
+    delete:
+      tags:
+        - Users
+      summary: Delete user
+      description: get user info
+      operationId: delete_user
+      parameters:
+        - name: userId
+          in: path
+          required: true
+          style: simple
+          explode: false
+          schema:
+            maxLength: 36
+            pattern: \b[0-9a-f]{8}\b-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-\b[0-9a-f]{12}\b
+            type: string
+            format: uuid
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserResponse'
   /accounts:
     get:
       tags:
@@ -71,7 +95,7 @@ paths:
       description: Get User Account List find by User
       operationId: get_accounts_by_user
       parameters:
-      - name: userID
+      - name: userId
         in: query
         required: true
         style: form
@@ -107,7 +131,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/AccountResponse'
-  /accounts/{accountID}:
+  /accounts/{accountId}:
     get:
       tags:
       - Accounts
@@ -115,7 +139,7 @@ paths:
       description: get Account info
       operationId: get_account_by_id
       parameters:
-      - name: accountID
+      - name: accountId
         in: path
         required: true
         style: simple
@@ -139,7 +163,7 @@ paths:
       description: Set account Balance
       operationId: update_account_amount
       parameters:
-      - name: accountID
+      - name: accountId
         in: path
         required: true
         style: simple
@@ -209,15 +233,15 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/TransactionResponse'
-  /transactions/{transactionID}:
+  /transactions/{transactionId}:
     get:
       tags:
       - Transactions
       summary: Transaction info
-      description: Get Transaction info by transactionID
+      description: Get Transaction info by transactionId
       operationId: get_transaction_by_id
       parameters:
-      - name: transactionID
+      - name: transactionId
         in: path
         required: true
         style: simple
@@ -238,48 +262,49 @@ components:
   schemas:
     UserRequest:
       type: object
+      required:
+        - username
       properties:
-        name:
+        username:
           maxLength: 50
           pattern: /^[a-z ,.'-]+$/i
           type: string
           example: Name
-        surname:
+        firstName:
+          maxLength: 50
+          pattern: /^[a-z ,.'-]+$/i
+          type: string
+          example: Name
+        lastName:
           maxLength: 50
           pattern: /^[a-z ,.'-]+$/i
           type: string
           example: Surname Name
-        mail:
+        email:
           maxLength: 50
           pattern: (?:[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*|"(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21\x23-\x5b\x5d-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])*")@(?:(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?|\[(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?|[a-z0-9-]*[a-z0-9]:(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21-\x5a\x53-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])+)\])
           type: string
           example: mail@mail.com
-        pass:
-          maxLength: 50
-          pattern: ^(?:[A-Za-z0-9+/]{4})*(?:[A-Za-z0-9+/]{2}==|[A-Za-z0-9+/]{3}=)?$
-          type: string
-          description: Base64 encode Password
-          example: cGFzc3dvcmQ=
     UserResponse:
       type: object
       properties:
-        userID:
+        userId:
           maxLength: 36
           pattern: \b[0-9a-f]{8}\b-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-\b[0-9a-f]{12}\b
           type: string
           format: uuid
           example: ca53bbc5-c35c-4b5c-8095-0d154ab8d6c7
-        name:
+        firstName:
           maxLength: 50
           pattern: /^[a-z ,.'-]+$/i
           type: string
-          example: Name
-        surname:
+          example: FirstName
+        lastName:
           maxLength: 50
           pattern: /^[a-z ,.'-]+$/i
           type: string
-          example: Surname Text
-        mail:
+          example: LastName
+        email:
           pattern: (?:[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*|"(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21\x23-\x5b\x5d-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])*")@(?:(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?|\[(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?|[a-z0-9-]*[a-z0-9]:(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21-\x5a\x53-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])+)\])
           type: string
           example: mail@mail.com
@@ -319,7 +344,7 @@ components:
     TransactionResponse:
       type: object
       properties:
-        transactionID:
+        transactionId:
           type: string
           format: uuid
           example: ca53bbc5-c35c-4b5c-8095-0d154ab8d6c7
@@ -345,7 +370,7 @@ components:
     AccountRequest:
       type: object
       properties:
-        userID:
+        userId:
           maxLength: 36
           pattern: \b[0-9a-f]{8}\b-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-\b[0-9a-f]{12}\b
           type: string
@@ -353,7 +378,7 @@ components:
     AccountResponse:
       type: object
       properties:
-        accountID:
+        accountId:
           maxLength: 36
           pattern: \b[0-9a-f]{8}\b-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-\b[0-9a-f]{12}\b
           type: string
